--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "c8": "^7.13.0",
         "chai": "^4.3.7",
         "copy-webpack-plugin": "^11.0.0",
+        "copyfiles": "^2.4.1",
         "cross-env": "^7.0.3",
         "css-loader": "^6.8.1",
         "eslint": "^8.57.1",
